# kino_dynamic_walking_ddp

./: CMakeLists.txt  README.md  package.xml
launch/: dyros_simple_robot_display.launch
src/: dyros_practice_1.cpp  dyros_practice_1_ddp.cpp
